removed the ispublished column from entries, replaced with a state column
